# brtc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: builtin.cmake  core.cmake  funcs.cmake
examples/: CMakeLists.txt
examples/common/: d3d_helper.cpp  d3d_helper.h
examples/recv_stream/: CMakeLists.txt  main.cpp
examples/send_stream/: CMakeLists.txt  main.cpp
include/: brtc.h
include/brtc/: builtin.h  frame.h  fwd.h  interface.h  webrtc_key_value_config.h
include/brtc/video/: codec_interface.h  codec_type.h  color_space.h  common_constants.h  dependency_descriptor.h  generic_frame_info.h  h264_globals.h  hdr_metadata.h  vp8_globals.h  vp9_globals.h
src/: CMakeLists.txt  main.cpp  packetizer.cpp  packetizer.h  rtp.h  transport.cpp  transport.h
src/builtin/: CMakeLists.txt  builtin.cpp
src/builtin/capture/: dxgi_capture.cpp  dxgi_capture.h
src/builtin/decoder/: builtin_nvdec.cpp  builtin_nvdec.h  mfx_decoder.cpp  mfx_decoder.h
src/builtin/encoder/: builtin_nvenc.cpp  builtin_nvenc.h  mfx_encoder.cpp  mfx_encoder.h  nv_encoder.cpp  nv_encoder.h  nvenc_external_input.cpp  nvenc_external_input.h
src/builtin/mfx_common/: mfx_allocator.cpp  mfx_allocator.h
src/builtin/p2p/: p2p.cpp  p2p.h
src/builtin/render/: d3d11_render.cpp  d3d11_render.h
src/builtin/strategies/: simple_strategies.cpp  simple_strategies.h
src/capture/: dxgi_capture.cpp  dxgi_capture.h
src/common/: capture.h  d3d_helper.h  d3d_mgr.cpp  d3d_mgr.h  decoder.h  encoder.h  mfx_allocator.cpp  mfx_allocator.h  packetizer.cpp  packetizer.h  render.h  rtp.cpp  rtp.h  time_utils.h  transport.cpp  transport.h  udp_packet.h  video_source.h
src/controller/: controller.h  media_receiver.cpp  media_receiver.h  media_receiver_impl.cpp  media_receiver_impl.h  media_sender.cpp  media_sender.h  media_sender_impl.cpp  media_sender_impl.h
src/decoder/: mfx_decoder.cpp  mfx_decoder.h
src/frame_assembler/: frame_assembler.cpp  frame_assembler.h  sequence_number_util.h
src/p2p/: p2p.h
src/render/: d3d11_render.cpp  d3d11_render.h
src/rtp/: extension.cpp  extension.h  extra_rtp_info.h  rtp.cpp  rtp.h  rtp_config.cpp  rtp_config.h  rtp_parameters.cpp  rtp_parameters.h  rtp_payload_params.cpp  rtp_payload_params.h
src/transport/: quic_transport.cpp  quic_transport.h  rtp_transport.cpp  rtp_transport.h  sctp_transport.cpp  sctp_transport.h  transport.cpp  transport.h
src/video/: chain_diff_calculator.cpp  chain_diff_calculator.h  color_space.cpp  dependency_descriptor.cpp  frame_dependencies_calculator.cpp  frame_dependencies_calculator.h  generic_frame_info.cpp  hdr_metadata.cpp
src/video/depacketizer/: bit_buffer.cpp  bit_buffer.h  pps_parser.cpp  pps_parser.h  sps_parser.cpp  sps_parser.h  video_rtp_depacketizer.cpp  video_rtp_depacketizer.h  video_rtp_depacketizer_h264.cpp  video_rtp_depacketizer_h264.h
src/video/frame_assembler/: frame_assembler.cpp  frame_assembler.h
src/video/frame_buffer/: common_constants.h  decoded_frames_history.cpp  decoded_frames_history.h  frame_buffer.cpp  frame_buffer.h  reference_finder.cpp  reference_finder.h  rtp_frame_id_only_ref_finder.cpp  rtp_frame_id_only_ref_finder.h  rtp_generic_ref_finder.cpp  rtp_generic_ref_finder.h  rtp_seq_num_only_ref_finder.cpp  rtp_seq_num_only_ref_finder.h  rtp_vp8_ref_finder.cpp  rtp_vp8_ref_finder.h  rtp_vp9_ref_finder.cpp  rtp_vp9_ref_finder.h  vp8_globals.h  vp9_globals.h
src/video/jitter_buffer/: decoded_frames_history.cpp  decoded_frames_history.h  jitter_buffer.cpp  jitter_buffer.h
src/video/packetizer/: packetizer.cpp  packetizer.h  packetizer_h264.cpp  packetizer_h264.h
src/video/reference_finder/: h264_globals.h  reference_finder.cpp  reference_finder.h  rtp_frame_id_only_ref_finder.cpp  rtp_frame_id_only_ref_finder.h  rtp_generic_ref_finder.cpp  rtp_generic_ref_finder.h  rtp_seq_num_only_ref_finder.cpp  rtp_seq_num_only_ref_finder.h  rtp_vp8_ref_finder.cpp  rtp_vp8_ref_finder.h  rtp_vp9_ref_finder.cpp  rtp_vp9_ref_finder.h  vp8_globals.h  vp9_globals.h
